# parenting-mobile-app

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: checker_agent.py  parenting_agent.py
app/api/: dependencies.py
app/api/routes/: chat.py  conversations.py  health.py  messages.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: crud.py  models.py  session.py
app/schemas/: conversation_schema.py  conversation_schemas.py  message_schema.py  message_schemas.py  user_schema.py  user_schemas.py
app/services/: chatgpt.py  cost_monitor.py  cost_tracker.py  embeddings.py  langgraph_pipeline.py  openai_client.py  retrieval.py
scripts/: debug_api_key.py  ingest_docs.py  init_db.py
